Remove border on jobs screen
The cells span the entire width of the screen now.
No more margin.
Cells draw separator lines between them.
Tapping a cell highlights it.

--- a/CocoaHeadsNL/CocoaHeadsNL/JobsCell.xib
+++ b/CocoaHeadsNL/CocoaHeadsNL/JobsCell.xib
@@ -3,43 +3,63 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="jobsCell" id="gTV-IL-0wX" customClass="JobsCell" customModule="CocoaHeadsNL" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="145" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="145" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="145" height="100"/>
+                <rect key="frame" x="0.0" y="0.0" width="145" height="120"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qPm-B3-Wcy">
-                        <rect key="frame" x="0.0" y="78" width="145" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                        <rect key="frame" x="3" y="88" width="139" height="22"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CocoaHeadsNLLogo" translatesAutoresizingMaskIntoConstraints="NO" id="i8X-T9-hP5">
-                        <rect key="frame" x="22" y="0.0" width="100" height="70"/>
+                        <rect key="frame" x="22" y="10" width="100" height="70"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="i8X-T9-hP5" secondAttribute="height" multiplier="10:7" id="xQd-Pm-u3R"/>
+                            <constraint firstAttribute="height" constant="70" id="XKC-nB-R7V"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uvY-3V-hpx" userLabel="Separator Bottom">
+                        <rect key="frame" x="0.0" y="119" width="145" height="1"/>
+                        <color key="backgroundColor" white="0.83999999999999997" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="iP3-C0-3fA"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XfV-Kv-cQT" userLabel="Separator Right">
+                        <rect key="frame" x="144" y="0.0" width="1" height="120"/>
+                        <color key="backgroundColor" white="0.83999999999999997" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="1" id="8gl-2h-USy"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="qPm-B3-Wcy" secondAttribute="bottom" id="49n-Dq-rau"/>
+                <constraint firstAttribute="bottom" secondItem="qPm-B3-Wcy" secondAttribute="bottom" constant="10" id="49n-Dq-rau"/>
+                <constraint firstAttribute="bottom" secondItem="uvY-3V-hpx" secondAttribute="bottom" id="9sc-JQ-Dtm"/>
                 <constraint firstAttribute="trailing" secondItem="i8X-T9-hP5" secondAttribute="trailing" constant="23" id="BxC-mf-Jj0"/>
-                <constraint firstItem="qPm-B3-Wcy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FFm-Jc-8gg"/>
-                <constraint firstItem="i8X-T9-hP5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="MXN-Zv-CpI"/>
-                <constraint firstAttribute="trailing" secondItem="qPm-B3-Wcy" secondAttribute="trailing" id="PGy-7n-v2B"/>
+                <constraint firstItem="qPm-B3-Wcy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="3" id="FFm-Jc-8gg"/>
+                <constraint firstItem="i8X-T9-hP5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="MXN-Zv-CpI"/>
+                <constraint firstAttribute="trailing" secondItem="qPm-B3-Wcy" secondAttribute="trailing" constant="3" id="PGy-7n-v2B"/>
+                <constraint firstAttribute="trailing" secondItem="uvY-3V-hpx" secondAttribute="trailing" id="PkP-ly-h06"/>
+                <constraint firstAttribute="bottom" secondItem="XfV-Kv-cQT" secondAttribute="bottom" id="U5J-DA-9K8"/>
                 <constraint firstItem="i8X-T9-hP5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="22" id="V7L-yx-8ar"/>
+                <constraint firstItem="XfV-Kv-cQT" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="YoP-Aj-PNs"/>
+                <constraint firstItem="uvY-3V-hpx" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Zeg-fO-mBY"/>
+                <constraint firstAttribute="trailing" secondItem="XfV-Kv-cQT" secondAttribute="trailing" id="syf-8P-1vA"/>
                 <constraint firstItem="qPm-B3-Wcy" firstAttribute="top" secondItem="i8X-T9-hP5" secondAttribute="bottom" constant="8" id="tKM-k0-Cw0"/>
             </constraints>
             <connections>
                 <outlet property="imageView" destination="i8X-T9-hP5" id="TxC-xH-7OZ"/>
+                <outlet property="separator" destination="XfV-Kv-cQT" id="XQu-bp-Ote"/>
                 <outlet property="textLabel" destination="qPm-B3-Wcy" id="iqh-pQ-yaJ"/>
             </connections>
             <point key="canvasLocation" x="562.5" y="324"/>
