Add nicer logo to navigation bars

--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -623,6 +623,6 @@
         <image name="JobsTabIcon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="GJd-Rt-qyZ"/>
+        <segue reference="YXG-G2-hcg"/>
     </inferredMetricsTieBreakers>
 </document>
